components/hac-boot/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    route.openshift.io/termination: reencrypt
  labels:
    frontend: hac-proxy
  name: hac-proxy
spec:
  ingressClassName: openshift-default
  rules:
    - host: hac-dev.clusters.stonesoupengineering.com
      http:
        paths:
          - backend:
              service:
                name: hac-proxy
                port:
                  number: 8000
            path: /api/k8s
            pathType: Prefix
          - backend:
              service:
                name: hac-proxy
                port:
                  number: 8000
            path: /wss/k8s
            pathType: Prefix
  tls:
    - {}
